@@ -23,3 +23,15 @@ function dump(arr,level) {
 	}
 	return dumped_text;
 }
+
+// HANDLE ALL AJAX REQUESTS
+function getAjax(method,path,form,callback) {
+	$.ajax({
+		type: method,
+		url: path,
+		data: form,
+		success: function(result) {
+			callback(result);
+		}
+	});
+}
